--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@lexical/code": "^0.11.3",
     "@lexical/react": "^0.11.3",
-    "@lexical/utils": "^0.11.3",
+    "@lexical/rich-text": "^0.11.3",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
@@ -19,16 +18,12 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lexical": "^0.11.3",
-    "lexical-solid": "^0.6.2",
     "next": "13.4.12",
     "postcss": "8.4.27",
+    "prettier": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
-  },
-  "devDependencies": {
-    "@types/katex": "^0.16.2",
-    "@types/prismjs": "^1.26.0"
   }
 }
