--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@vercel/og": "^0.5.10",
     "autoprefixer": "10.4.14",
+    "copy-image-clipboard": "^2.1.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lexical": "^0.11.3",
