solved the problem with package conflicts

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@lexical/headless": "^0.12.0",
-    "@lexical/react": "^0.11.3",
-    "@lexical/rich-text": "^0.11.3",
+    "@lexical/react": "0.12.0",
+    "@lexical/rich-text": "0.12.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
@@ -20,7 +20,7 @@
     "copy-image-clipboard": "^2.1.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "lexical": "^0.11.3",
+    "lexical": "0.12.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "prettier": "^3.0.1",
