--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
