--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@lexical/rich-text": "0.12.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@vercel/og": "^0.5.10",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "copy-image-clipboard": "^2.1.2",
     "lexical": "0.12.0",
@@ -29,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-wrap-balancer": "^1.1.0",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
