--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "copy-image-clipboard": "^2.1.2",
     "lexical": "0.12.0",
+    "lucide-react": "^0.269.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "prettier": "^3.0.2",
@@ -33,6 +34,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
   }
 }
