--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lexical/code": "^0.12.0",
     "@lexical/headless": "^0.12.0",
     "@lexical/react": "0.12.0",
     "@lexical/rich-text": "^0.12.0",
